--- a/file.html
+++ b/file.html
@@ -23,7 +23,7 @@
     <br /><br />
     1. <strong>Theft your user accounts:</strong> Scanning a QR link may lead to the theft of user accounts via fraudulent attacks such as “Phishing”
     <br /><br /><br />
-    2. <strong>Potential exposure to malware:</strong> The QR code may contain a link that downloads malware to your device, such as viruses or ransomeware
+    2. <strong>Potential exposure to malware:</strong> The QR code may contain a link that downloads malware to your device, such as viruses or ransomware
     <br /><br /><br />
     3. <strong>Loss of privacy:</strong> Scanning a QR code may reveal sensitive personal information, such as where you visit?
     <br /><br /><br />
